--- a/DifferencebetweentypesofBigData.html
+++ b/DifferencebetweentypesofBigData.html
@@ -9,7 +9,7 @@
 <li><a href="DifferencebetweentypesofBigData.html">Difference between types of Big Data</a></li>
 <li><a href="consandprosofBigData.html">Cons and Pros of Big Data </a></li>
 <li><a href="ApplicationsofBigData.html">Applications of Big Data</a></li>
-
+  <h3>lama</h3>
  <img src="12.jpg" alt="11111" width="250" height="250">
 
 
